--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
-        applicationId "com.amsavarthan.trivia"
-        minSdkVersion 19
-        targetSdkVersion 27
+        applicationId "com.amsavarthan.game.trivia"
+        minSdkVersion 17
+        targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '28.0.0 rc1'
+    buildToolsVersion '28.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -28,29 +28,27 @@ android {
 
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.github.danimahardhika:cafebar:1.3.1'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.krtkush:LinearTimer:v2.1.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-    implementation "com.google.android.gms:play-services-auth:16.0.0"
-    implementation 'com.google.firebase:firebase-storage:16.0.2'
-    implementation 'com.google.firebase:firebase-firestore:17.1.0'
-    implementation 'com.google.firebase:firebase-messaging:17.3.0'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation "com.google.android.gms:play-services-auth:16.0.1"
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.matthiasrobbers:shortbread:1.0.2'
     implementation 'com.github.marlonlom:timeago:3.0.2'
+    implementation 'com.github.AppIntro:AppIntro:4.2.3'
     annotationProcessor 'com.github.matthiasrobbers:shortbread-compiler:1.0.2'
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
-repositories {
-    mavenCentral()
-}
