--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.amsavarthan.trivia">
+    package="com.amsavarthan.game.trivia">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,6 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AppIntro"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".AppRepeatIntro"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".About"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.About" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
@@ -39,8 +49,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Account"
-            android:theme="@style/AppTheme.About"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.About" />
     </application>
 
 </manifest>
