--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.amsavarthan.game.trivia">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -10,12 +11,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+       >
+
         <activity android:name=".AppIntro"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".AppRepeatIntro"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".About"
@@ -35,9 +37,13 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id" />
 
         <activity
             android:name=".StartQuizActivity"
@@ -49,8 +55,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Account"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.About" />
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
