--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.amsavarthan.game.trivia"
         minSdkVersion 17
-        targetSdkVersion 28
-        versionCode 8
-        versionName "1.2.0"
+        targetSdkVersion 29
+        versionCode 9
+        versionName "1.3.0"
         multiDexEnabled true
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '28.0.3'
+    buildToolsVersion '29.0.2'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -28,27 +28,26 @@ android {
 
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.google.firebase:firebase-core:16.0.8'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.github.danimahardhika:cafebar:1.3.1'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.krtkush:LinearTimer:v2.1.1'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
-    implementation "com.google.android.gms:play-services-auth:16.0.1"
-    implementation 'com.google.firebase:firebase-storage:16.1.0'
-    implementation 'com.google.firebase:firebase-firestore:18.1.0'
-    implementation 'com.google.firebase:firebase-messaging:17.5.0'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation "com.google.android.gms:play-services-auth:17.0.0"
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
+    implementation 'com.google.firebase:firebase-firestore:21.3.1'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.matthiasrobbers:shortbread:1.0.2'
     implementation 'com.github.marlonlom:timeago:3.0.2'
     implementation 'com.github.AppIntro:AppIntro:4.2.3'
     annotationProcessor 'com.github.matthiasrobbers:shortbread-compiler:1.0.2'
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
+    implementation 'com.google.android.gms:play-services-ads:18.3.0'
 }
 apply plugin: 'com.google.gms.google-services'
