--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,10 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.material3:material3:1.0.0-alpha01"
-    implementation 'com.google.android.material:material:1.5.0-alpha05'
+    implementation 'com.google.android.material:material:1.5.0-beta01'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
     implementation "com.google.accompanist:accompanist-insets:0.21.2-beta"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
