--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,17 +56,17 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
 
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha01"
-    implementation 'com.google.android.material:material:1.5.0-beta01'
+    implementation "androidx.compose.material3:material3:1.0.0-alpha04"
+    implementation 'com.google.android.material:material:1.6.0-alpha02'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation "androidx.navigation:navigation-compose:2.5.0-alpha01"
     implementation "com.google.accompanist:accompanist-insets:0.21.2-beta"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
@@ -76,7 +76,16 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
+    implementation "com.squareup.moshi:moshi:1.13.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
+
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
