--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
+    implementation 'nl.dionsegijn:konfetti-compose:2.0.1'
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
 }
