--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion '1.1.1'
     }
 
     packagingOptions {
@@ -63,26 +63,20 @@ dependencies {
 
     //Core
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta03'
-    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha01'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.0'
 
-    implementation 'com.google.android.material:material:1.8.0-alpha01'
+    implementation 'com.google.android.material:material:1.8.0-alpha02'
 
     //Jetpack Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
-
-    //Firebase
-    implementation platform("com.google.firebase:firebase-bom:29.0.0")
-    implementation "com.google.firebase:firebase-auth-ktx"
-
-    implementation "com.google.android.gms:play-services-auth:20.3.0"
 
     //Retrofit
     def retrofit="2.9.0"
@@ -100,25 +94,13 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
-    //WorkManager
-    def work_version = "2.7.1"
-
-    implementation "androidx.work:work-runtime-ktx:$work_version"
-
     //Hilt Additional
-    def hilt_work_version = "1.0.0"
-
-    implementation "androidx.hilt:hilt-work:$hilt_work_version"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-    kapt "androidx.hilt:hilt-compiler:$hilt_work_version"
-
 
     //Datastore
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "com.google.protobuf:protobuf-javalite:3.18.0"
 
-    //Miscellaneous
-    implementation "nl.dionsegijn:konfetti-compose:2.0.1"
 
     //Debug
     testImplementation 'junit:junit:4.13.2'
@@ -127,7 +109,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 
 }
 
