--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
     id "com.google.protobuf" version "0.8.17"
+    id 'com.google.devtools.ksp' version '1.7.20-1.0.7'
 }
 
 android {
@@ -49,7 +50,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.1.1'
+        kotlinCompilerExtensionVersion '1.3.2'
     }
 
     packagingOptions {
@@ -57,6 +58,15 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+    applicationVariants.all { variant ->
+        kotlin.sourceSets {
+            getByName(variant.name) {
+                kotlin.srcDir("build/generated/ksp/${variant.name}/kotlin")
+            }
+        }
+    }
+
 }
 
 dependencies {
@@ -66,20 +76,26 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha01'
-    implementation 'androidx.compose.material:material-icons-extended:1.3.0'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
 
     implementation 'com.google.android.material:material:1.8.0-alpha02'
 
-    //Jetpack Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    //Compose Destination
+    def compose_destination = "1.7.25-beta"
+
+    implementation "io.github.raamcosta.compose-destinations:core:$compose_destination"
+    ksp "io.github.raamcosta.compose-destinations:ksp:$compose_destination"
 
     //Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    def hilt = "2.44"
+
+    implementation "com.google.dagger:hilt-android:$hilt"
+    kapt "com.google.dagger:hilt-compiler:$hilt"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     //Retrofit
-    def retrofit="2.9.0"
+    def retrofit = "2.9.0"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
@@ -87,6 +103,7 @@ dependencies {
     //OkHttp
     implementation platform("com.squareup.okhttp3:okhttp-bom:4.10.0")
     implementation "com.squareup.okhttp3:okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor"
 
     //Moshi
     def moshi_version = "1.13.0"
@@ -94,13 +111,17 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
-    //Hilt Additional
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
-
     //Datastore
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "com.google.protobuf:protobuf-javalite:3.18.0"
 
+    //Socket.IO
+    implementation('io.socket:socket.io-client:2.1.0') {
+        exclude group: 'org.json', module: 'json'
+    }
+
+    //Palette
+    implementation "androidx.palette:palette:1.0.0"
 
     //Debug
     testImplementation 'junit:junit:4.13.2'
